syntax = "proto3";
package exa.extension_server_pb;

import "exa/codeium_common_pb.proto";
import "exa/jetski_cortex_pb.proto";
import "exa/language_server_pb.proto";
import "exa/unified_state_sync_pb.proto";
import "gemini_coder.proto";

message BackupMessage { bytes data = 1; }

message ConversationPickerRequest {
  exa.jetski_cortex_pb.CascadeTrajectorySummaries summaries = 1;
  string current_cascade_id = 2;
  string current_workspace_normalized_path = 3;
  string current_workspace_uri = 4;
}

message FocusEditorWindow {
  string cascade_id = 1;
}

message IsAgentManagerEnabledRequest {
}

message IsAgentManagerEnabledResponse {
  bool enabled = 1;
}

message ConversationPickerResponse {
  string chat_message = 1;
  string selected_cascade_id = 2;
  repeated string deleted_cascade_ids = 3;
}

message StartAudioRecordingRequest {
}

message EndAudioRecordingRequest {
}

message EndAudioRecordingResponse {
  string transcription = 1;
}

message StartAudioRecordingResponse {
}

message GetCurrentAudioRecordingRequest {
}

message GetCurrentAudioRecordingResponse {
  float average_volume = 2;
}

message LanguageServerStartedRequest {
  int32 https_port = 1;
  int32 lsp_port = 2;
  string csrf_token = 4;
  int32 http_port = 5;
}

message LanguageServerStartedResponse {
}

message OpenSettingRequest {
  string setting_id = 1;
}

message OpenSettingResponse {
}

message OpenFilePointerRequest {
  string file_uri = 1;
  int32 start_line = 2;
  int32 start_col = 3;
  int32 end_line = 4;
  int32 end_col = 5;
  bool is_cascade_diff = 6;
}

message OpenFilePointerResponse {
}

message InsertCodeAtCursorRequest {
  string text = 1;
  ActiveEditorType editor_type = 2;
}

message InsertCodeAtCursorResponse {
}

message EventMetadataRecord {
  string key = 1;
  string value = 2;
}

message LogEventRequest {
  exa.codeium_common_pb.ProductEventType event = 1;
  string event_string = 3;
  repeated EventMetadataRecord metadata = 2;
}

message LogEventResponse {
}

message CheckTerminalShellSupportRequest {
}

message CheckTerminalShellSupportResponse {
  bool has_shell_integration = 1;
  string shell_name = 2;
  string shell_path = 3;
}

message ExecuteCommandRequest {
  string command_line = 5;
  string cwd = 3;
  string terminal_id = 4;
  bool sandbox_override = 6;
}

message ShowTerminalRequest {
  string terminal_id = 1;
}

message ShowTerminalResponse {
}

message OpenVirtualFileRequest {
  string text = 1;
  bool show_markdown_preview = 2;
}

message OpenVirtualFileResponse {
}

message SaveDocumentRequest {
  string uri = 1;
}

message SaveDocumentResponse {
}

message ReadTerminalRequest {
  string process_id = 1;
}

message ReadTerminalResponse {
  string contents = 1;
}

message OpenTerminalRequest {
  string process_id = 1;
}

message OpenTerminalResponse {
}

message SendTerminalInputRequest {
  string terminal_id = 1;
  string input = 2;
}

message SendTerminalInputResponse {
  bool success = 1;
  string error = 2;
}

message TerminateCommandRequest {
  string terminal_id = 1;
}

message TerminateCommandResponse {
}

message GetLintErrorsRequest {
  GetLintErrorsRequest_AwaitNewLintsConfig await_new_lints_config = 1;
}

message GetLintErrorsRequest_AwaitNewLintsConfig {
  string acknowledger_id = 1;
  int32 timeout_ms = 2;
  int32 grace_period_ms = 3;
  bool include_saved = 4;
}

message GetLintErrorsResponse {
  repeated exa.codeium_common_pb.CodeDiagnostic lint_errors = 1;
  repeated exa.codeium_common_pb.CodeDiagnostic persistent_lint_errors = 2;
}

message OpenDiffZonesRequest {
  string cascade_id = 1;
  repeated exa.language_server_pb.ValidationState validation_states = 2;
  bool write_new_state = 3;
  repeated uint32 step_indices = 4;
  string trace_id = 5;
}

message OpenDiffZonesResponse {
}

message OpenExternalUrlRequest {
  string url = 1;
  bool use_ide_browser = 2;
}

message OpenExternalUrlResponse {
}

message HandleAsyncPostMessageRequest {
  string message_type = 1;
  string message_content = 2;
}

message HandleAsyncPostMessageResponse {
  string response_content = 1;
}

message PlaySoundRequest {
  SoundType sound_type = 1;
}

message PlaySoundResponse {
}

message OpenAntigravityRulesFileRequest {
  bool is_workspace_rules = 1;
}

message OpenAntigravityRulesFileResponse {
}

message OpenPluginPageRequest {
  string plugin_id = 4;
}

message OpenPluginPageResponse {
}

message OpenPluginConfigModalRequest {
  string plugin_id = 3;
}

message OpenPluginConfigModalResponse {
}

message TerminalResearchResultRequest {
  gemini_coder.Step last_step = 1;
}

message TerminalResearchResultResponse {
}

message OpenConfigurePluginsPageRequest {
}

message OpenConfigurePluginsPageResponse {
}

message WriteCascadeEditRequest {
  string uri = 1;
  string target_content = 2;
}

message WriteCascadeEditResponse {
}

message OpenConversationWorkspaceQuickPickRequest {
  string cascade_id = 1;
  repeated string workspace_uris = 2;
}

message OpenConversationWorkspaceQuickPickResponse {
  bool open_in_current_window = 1;
}

message FindAllReferencesRequest {
  string file_uri = 1;
  string symbol = 2;
  uint32 line = 3;
  uint32 occurrence_index = 4;
}

message FindAllReferencesResponse {
  repeated exa.codeium_common_pb.LspReference references = 1;
}

message GetDefinitionRequest {
  repeated GetDefinitionRequestItem request = 1;
}

message GetDefinitionRequestItem {
  string file_uri = 1;
  exa.codeium_common_pb.DocumentPosition position = 2;
  string line_content = 3;
}

message GetDefinitionResponse {
  repeated GetDefinitionResponseItem response = 1;
}

message GetDefinitionResponseItem {
  repeated exa.codeium_common_pb.LspReference definitions = 1;
  exa.codeium_common_pb.GRPCStatus status = 2;
}

message HandleProposeCodeExtensionVerificationRequest {
  gemini_coder.Step step = 1;
}

message HandleProposeCodeExtensionVerificationResponse {
}

message UpdateCascadeTrajectorySummariesRequest {
  exa.jetski_cortex_pb.CascadeTrajectorySummaries summaries = 1;
}

message UpdateCascadeTrajectorySummariesResponse {
}

message RunExtensionCodeRequest {
  string code = 1;
}

message RunExtensionCodeResponse {
  string output = 1;
}

message AddAnnotationRequest {
  exa.codeium_common_pb.CodeAnnotation annotation = 1;
}

message AddAnnotationResponse {
}

message RemoveAnnotationRequest {
  string annotation_id = 1;
}

message RemoveAnnotationResponse {
}

message ShowAnnotationRequest {
  string annotation_id = 1;
}

message ShowAnnotationResponse {
}

message UpdateDetailedViewWithCascadeInputRequest {
  exa.language_server_pb.HandleStreamingCommandRequest request = 1;
  exa.language_server_pb.HandleStreamingCommandResponse response = 2;
}

message UpdateDetailedViewWithCascadeInputResponse {
}

message GetSecretValueRequest {
  string key = 1;
}

message GetSecretValueResponse {
  string value = 1;
}

message StoreSecretValueRequest {
  string key = 1;
  string value = 2;
}

message StoreSecretValueResponse {
}

message GetBrowserOnboardingPortRequest {
}

message GetBrowserOnboardingPortResponse {
  uint32 port = 1;
}

message GetChromeDevtoolsMcpUrlRequest {
}

message GetChromeDevtoolsMcpUrlResponse {
  string url = 1;
}

message FocusManagerWindow {
  string cascade_id = 1;
}

message FocusIDEWindowRequest {
  oneof window_type {
    FocusEditorWindow editor = 1;
    FocusManagerWindow manager = 2;
  }
}

message FocusIDEWindowResponse {
}

message LaunchBrowserRequest {
  string extension_path = 1;
  bool launch_in_foreground = 2;
}

message LaunchBrowserResponse {
  string cdp_address = 1;
}

message RestartUserStatusUpdaterRequest {
}

message RestartUserStatusUpdaterResponse {
}

message RecordErrorRequest {
  exa.codeium_common_pb.ErrorTrace error_trace = 1;
}

message RecordErrorResponse {
}

message SubscribeToUnifiedStateSyncTopicRequest {
  string topic = 1;
}

message UnifiedStateSyncUpdate {
  oneof update_type {
    exa.unified_state_sync_pb.Topic initial_state = 1;
    exa.unified_state_sync_pb.AppliedUpdate applied_update = 2;
  }
}

message PushUnifiedStateSyncUpdateRequest {
  exa.unified_state_sync_pb.UpdateRequest update = 1;
}

message PushUnifiedStateSyncUpdateResponse {
}

message BroadcastConversationDeletionRequest {
  string deleted_cascade_id = 1;
}

message BroadcastConversationDeletionResponse {
}

message FetchMCPAuthTokenRequest {
  string server_url = 1;
  string url = 2;
  int32 status = 3;
  string status_text = 4;
  map<string, string> headers = 5;
  string body = 6;
}

message FetchMCPAuthTokenResponse {
  string token = 1;
}

enum ActiveEditorType {
  ACTIVE_EDITOR_TYPE_UNSPECIFIED = 0;
  ACTIVE_EDITOR_TYPE_TEXT_EDITOR = 1;
  ACTIVE_EDITOR_TYPE_TERMINAL = 2;
}

enum SoundType {
  SOUND_TYPE_UNSPECIFIED = 0;
  SOUND_TYPE_CASCADE_DONE = 1;
}

service ExtensionServerService {
  rpc LanguageServerStarted(LanguageServerStartedRequest) returns (LanguageServerStartedResponse);
  rpc OpenSetting(OpenSettingRequest) returns (OpenSettingResponse);
  rpc OpenFilePointer(OpenFilePointerRequest) returns (OpenFilePointerResponse);
  rpc InsertCodeAtCursor(InsertCodeAtCursorRequest) returns (InsertCodeAtCursorResponse);
  rpc LogEvent(LogEventRequest) returns (LogEventResponse);
  rpc CheckTerminalShellSupport(CheckTerminalShellSupportRequest) returns (CheckTerminalShellSupportResponse);
  rpc ExecuteCommand(ExecuteCommandRequest) returns (stream exa.codeium_common_pb.TerminalShellCommandStreamChunk);
  rpc ShowTerminal(ShowTerminalRequest) returns (ShowTerminalResponse);
  rpc SendTerminalInput(SendTerminalInputRequest) returns (SendTerminalInputResponse);
  rpc TerminateCommand(TerminateCommandRequest) returns (TerminateCommandResponse);
  rpc OpenVirtualFile(OpenVirtualFileRequest) returns (OpenVirtualFileResponse);
  rpc SaveDocument(SaveDocumentRequest) returns (SaveDocumentResponse);
  rpc ReadTerminal(ReadTerminalRequest) returns (ReadTerminalResponse);
  rpc OpenTerminal(OpenTerminalRequest) returns (OpenTerminalResponse);
  rpc GetLintErrors(GetLintErrorsRequest) returns (GetLintErrorsResponse);
  rpc OpenDiffZones(OpenDiffZonesRequest) returns (OpenDiffZonesResponse);
  rpc OpenExternalUrl(OpenExternalUrlRequest) returns (OpenExternalUrlResponse);
  rpc HandleAsyncPostMessage(HandleAsyncPostMessageRequest) returns (HandleAsyncPostMessageResponse);
  rpc PlaySound(PlaySoundRequest) returns (PlaySoundResponse);
  rpc OpenAntigravityRulesFile(OpenAntigravityRulesFileRequest) returns (OpenAntigravityRulesFileResponse);
  rpc OpenPluginPage(OpenPluginPageRequest) returns (OpenPluginPageResponse);
  rpc OpenPluginConfigModal(OpenPluginConfigModalRequest) returns (OpenPluginConfigModalResponse);
  rpc OpenConfigurePluginsPage(OpenConfigurePluginsPageRequest) returns (OpenConfigurePluginsPageResponse);
  rpc OpenConversationWorkspaceQuickPick(OpenConversationWorkspaceQuickPickRequest) returns (OpenConversationWorkspaceQuickPickResponse);
  rpc FindAllReferences(FindAllReferencesRequest) returns (FindAllReferencesResponse);
  rpc GetDefinition(GetDefinitionRequest) returns (GetDefinitionResponse);
  rpc TerminalResearchResult(TerminalResearchResultRequest) returns (TerminalResearchResultResponse);
  rpc WriteCascadeEdit(WriteCascadeEditRequest) returns (WriteCascadeEditResponse);
  rpc StartAudioRecording(StartAudioRecordingRequest) returns (StartAudioRecordingResponse);
  rpc EndAudioRecording(EndAudioRecordingRequest) returns (EndAudioRecordingResponse);
  rpc GetCurrentAudioRecording(GetCurrentAudioRecordingRequest) returns (GetCurrentAudioRecordingResponse);
  rpc HandleProposeCodeExtensionVerification(HandleProposeCodeExtensionVerificationRequest) returns (HandleProposeCodeExtensionVerificationResponse);
  rpc UpdateCascadeTrajectorySummaries(UpdateCascadeTrajectorySummariesRequest) returns (UpdateCascadeTrajectorySummariesResponse);
  rpc RunExtensionCode(RunExtensionCodeRequest) returns (RunExtensionCodeResponse);
  rpc AddAnnotation(AddAnnotationRequest) returns (AddAnnotationResponse);
  rpc RemoveAnnotation(RemoveAnnotationRequest) returns (RemoveAnnotationResponse);
  rpc ShowAnnotation(ShowAnnotationRequest) returns (ShowAnnotationResponse);
  rpc UpdateDetailedViewWithCascadeInput(UpdateDetailedViewWithCascadeInputRequest) returns (UpdateDetailedViewWithCascadeInputResponse);
  rpc GetSecretValue(GetSecretValueRequest) returns (GetSecretValueResponse);
  rpc StoreSecretValue(StoreSecretValueRequest) returns (StoreSecretValueResponse);
  rpc LaunchBrowser(LaunchBrowserRequest) returns (LaunchBrowserResponse);
  rpc RestartUserStatusUpdater(RestartUserStatusUpdaterRequest) returns (RestartUserStatusUpdaterResponse);
  rpc ShowConversationPicker(ConversationPickerRequest) returns (ConversationPickerResponse);
  rpc GetBrowserOnboardingPort(GetBrowserOnboardingPortRequest) returns (GetBrowserOnboardingPortResponse);
  rpc GetChromeDevtoolsMcpUrl(GetChromeDevtoolsMcpUrlRequest) returns (GetChromeDevtoolsMcpUrlResponse);
  rpc FocusIDEWindow(FocusIDEWindowRequest) returns (FocusIDEWindowResponse);
  rpc SmartFocusConversation(exa.language_server_pb.SmartFocusConversationRequest) returns (exa.language_server_pb.SmartFocusConversationResponse);
  rpc IsAgentManagerEnabled(IsAgentManagerEnabledRequest) returns (IsAgentManagerEnabledResponse);
  rpc RecordError(RecordErrorRequest) returns (RecordErrorResponse);
  rpc SubscribeToUnifiedStateSyncTopic(SubscribeToUnifiedStateSyncTopicRequest) returns (stream UnifiedStateSyncUpdate);
  rpc PushUnifiedStateSyncUpdate(PushUnifiedStateSyncUpdateRequest) returns (PushUnifiedStateSyncUpdateResponse);
  rpc BroadcastConversationDeletion(BroadcastConversationDeletionRequest) returns (BroadcastConversationDeletionResponse);
  rpc FetchMCPAuthToken(FetchMCPAuthTokenRequest) returns (FetchMCPAuthTokenResponse);
}
