
import { AntigravityClient } from "../src/client.js";
import { Model } from "../src/gen/exa/codeium_common_pb_pb.js";

async function main() {
    console.log("ðŸ”Œ Connecting to Antigravity...");
    const client = await AntigravityClient.connect();
    console.log("âœ… Connected.");

    console.log("ðŸš€ Starting new cascade for tool test...");
    const cascade = await client.startCascade();
    console.log(`âœ¨ Cascade ID: ${cascade.cascadeId}`);

    // Listen to updates
    cascade.on("text", (ev) => {
        process.stdout.write(ev.delta);
    });

    cascade.on("thinking", (ev) => {
        process.stdout.write(`\x1b[90m${ev.delta}\x1b[0m`);
    });

    cascade.on("error", (err) => {
        console.error("\nâŒ Cascade Error:", err);
    });

    // We can also see the state updates for tool execution
    cascade.on("update", (state) => {
        const steps = state.trajectory?.steps || [];
        const lastStep = steps[steps.length - 1];
        if (lastStep && lastStep.step?.case !== "plannerResponse" && lastStep.step?.case !== "userInput") {
             // Only log once per state change for tool calls
             // (This is primitive but okay for this test)
             if (lastStep.status === 2) {
                 process.stdout.write(`\nðŸ› ï¸  Executing tool: ${lastStep.step.case}...\n`);
             }
        }
    });

    console.log("ðŸ“¨ Sending instruction...");
    const instruction = "Test.txtã¨ã„ã†ãƒ•ã‚¡ã‚¤ãƒ«ã®ä¸­èº«ã‚’èª­ã‚“ã§ã€ãã®å†…å®¹ã‚’æ­£ç¢ºã«å¾©å”±ã—ã¦ãã ã•ã„ã€‚";
    await cascade.sendMessage(instruction, { model: Model.PLACEHOLDER_M18 });
    console.log("\nâœ… Instruction sent. Waiting for response...\n");

    // Keep process alive
    await new Promise(r => setTimeout(r, 60000));
}

main().catch(console.error);
